--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Created by https://www.toptal.com/developers/gitignore/api/c
+# Edit at https://www.toptal.com/developers/gitignore?templates=c
+
+### C ###
 # Prerequisites
 *.d
 
@@ -50,3 +54,32 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# End of https://www.toptal.com/developers/gitignore/api/c
+# Created by https://www.toptal.com/developers/gitignore/api/meson
+# Edit at https://www.toptal.com/developers/gitignore?templates=meson
+
+### Meson ###
+# subproject directories
+/subprojects/*
+!/subprojects/*.wrap
+
+# Meson Directories
+meson-logs
+meson-private
+
+# Meson Files
+meson_benchmark_setup.dat
+meson_test_setup.dat
+sanitycheckcpp.cc     # C++ specific
+sanitycheckcpp.exe    # C++ specific
+
+# Ninja
+build.ninja
+.ninja_deps
+.ninja_logs
+
+# Misc
+compile_commands.json
+
+# End of https://www.toptal.com/developers/gitignore/api/meson
